[tool.poetry]
name = "game_test"
version = "0.1.0"
description = ""
authors = ["AlexProtchenko <72452349+AlexProtchenko@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
